--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									
 									<h2><a href="https://github.com/IvanRimba/Coffee-Beans-Sales-Analysis"> Coffee Beans Sales Analysis - SQL and Power BI<br />
 									</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
+									<p>The <br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
@@ -70,14 +70,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Students' Performance analysis<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>For this project, I analyzed student performance data using Excel. To make sure everything was accurate and consistent, I started by cleaning the data with Power Query. After that, I organized important variables and relationships using data mapping. In order to analyze the data, I used the CORREL function to look for correlations between variables such as GPA and absences, as well as descriptive statistics to summarize the data. In order to make the data easier to understand and to support my recommendations, I finally produced visuals to highlight important insights and patterns..</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
