--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Data Analyst</a>
 					</header>
 
 				<!-- Nav -->
@@ -56,9 +56,9 @@
 									
 									<h2><a href="https://github.com/IvanRimba/Coffee-Beans-Sales-Analysis"> Coffee Beans Sales Analysis - SQL and Power BI<br />
 									</a></h2>
-									<p>The <br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>This project <br />
+									<br />
+									</p>
 								</header>
 								<a href="https://github.com/IvanRimba/Coffee-Beans-Sales-Analysis" class="image main"><img src="images/coffees.png" alt="" /></a>
 								<ul class="actions special">
@@ -73,10 +73,10 @@
 										<h2><a href="#">Students' Performance analysis<br />
 										</a></h2>
 									</header>
-									<a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="image fit"><img src="images/students.png" alt="" /></a>
 									<p>For this project, I analyzed student performance data using Excel. To make sure everything was accurate and consistent, I started by cleaning the data with Power Query. After that, I organized important variables and relationships using data mapping. In order to analyze the data, I used the CORREL function to look for correlations between variables such as GPA and absences, as well as descriptive statistics to summarize the data. In order to make the data easier to understand and to support my recommendations, I finally produced visuals to highlight important insights and patterns..</p>
 									<ul class="actions special">
-										<li><a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="button">Full Story</a></li>
+										<li><a href="https://medium.com/@ivanrimba/students-performance-project-736f672b008f" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
