--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									
 									<h2><a href="https://github.com/IvanRimba/Coffee-Beans-Sales-Analysis"> Coffee Beans Sales Analysis - SQL and Power BI<br />
 									</a></h2>
-									<p>This project <br />
+									<p>In this project, I leveraged my expertise in SQL and Power BI to uncover valuable insights from a coffee sales data set. I demonstrated proficiency in using advanced SQL queries such as, joins, window functions, CTEs, and Date functions for data cleaning and analysis. I then utilized Power BI to visualize key findings through dynamic charts and dashboards, including DAX expressions for deeper analysis and enhanced reporting. <br />
 									<br />
 									</p>
 								</header>
